# iacommx_test

./: .env.dist  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Dockerfile  README.md  compose.yml  entrypoint.sh  makefile  pyproject.toml
db/: schema.sql
db/migrations/: 20240705180946_create_solicitudes_table.sql
src/: celery_worker.py  main.py  tasks.py
src/api/: health_check.py  root.py
src/api/v1/: routers.py
src/auth/: constants.py  dependencies.py  helpers.py  router.py  schemas.py  utils.py
src/config/: __init__.py  celery.py  common.py  database.py  helpers.py  settings.py
src/config/apps/: auth.py
src/database/: __init__.py  helpers.py  session.py  utils.py
src/database/crud/: base.py
src/database/models/: __init__.py  base_class.py  common.py
src/database/models/types/: __init__.py  datetime.py
src/grimorios/: helpers.py
src/solicitudes/: crud.py  models.py  router.py  schemas.py
src/tests/: test_solicitudes.py
src/tests/mocks/: solicitudes.py
